--- a/PassagePlanner/Views/RouteOverviewUC.xaml
+++ b/PassagePlanner/Views/RouteOverviewUC.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:c1="clr-namespace:C1.WPF.Maps;assembly=C1.WPF.Maps.4"
+    xmlns:c1="clr-namespace:C1.WPF.Maps;assembly=C1.WPF.Maps"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:Custom="http://schemas.componentone.com/wpf/C1Maps"
